# climbers

./: climbers.db  pnpm-lock.yaml  test.db
backend/: .gitignore  README-DEPLOY.md  climbing.db  env.example  pyproject.toml  requirements.txt  vercel.json
backend/app/: main.py
backend/app/core/: auth.py
backend/app/db/: database.py
backend/app/models/: climbing.py  schemas.py  user.py
backend/app/routes/: auth.py  route.py
backend/app/services/: route_service.py
climbing-app/: index.html  package-lock.json  package.json  vercel.json  vite.config.js
climbing-app/src/: App.css  App.jsx  HoldButton.css  HoldButton.jsx  index.css
frontend/: vite.config.ts
frontend/src/: App.css
graphs/: encodings.py  graph_builder.py  graph_test.py  models.py  planner.py  search.py  solver.py  test_planner_integration.py
scripts/: 001_create_profiles.sql
src/: App.css
